--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,12 +1,18 @@
 body{
-    height: 100vh;
-    width:  100vw;
+    /* height: 100vh; */
+    /* width:  100vw; */
     --color1 : #35155D;
     --color2 : #512B81  ;
     --color3 : #C70039;
     --color4 : #F0F0F0;
     --fontcolor1 : #f0f0f0fd;
-    background-color: var(--color2)
+    background-color: var(--color2);
+    max-width: 100vw;
+    max-height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     
 }
@@ -14,27 +20,46 @@ body{
 #content{
     width: 100%;
     height: 100%;
-    
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
-header{
+#presentation{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color : var(--fontcolor1)
+    color : var(--fontcolor1);
+    width: 50%;
 
 }
-header h1{
+#presentation h1{
     font-size: 4em;
     margin-bottom: 1px;
 }
 
-header p{
+#presentation p{
     font-size: 2em;
 }
+
+#presentation span{
+    width: 70%;
+}
+#links_{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 70%;
+}
+
+#links_ h2{
+    color: #F0F0F0;
+
+}
+
 
 #types{
     display: flex;
@@ -45,7 +70,7 @@ header p{
 #types ul{
     margin: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     list-style: none;
     align-items: center;
     justify-content: space-around;
@@ -66,51 +91,4 @@ header p{
 #types ul li:hover{
     background-color: rgb(209, 63, 95);
     
-}
-
-#projects_content{
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 70%;
-    margin: 0 auto;
-}
-
-#projects_list{
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    width: 100%;
-}
-
-.project_container{
-    margin-top: 4rem;
-    width: 90%;
-    min-height: 10rem;
-    background-color: var(--color4);
-    border-radius: 10px;
-}
-
-
-.title{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2em;
-}
-
-#presentation-header{
-    text-align: center;
-}
-
-#presentation-header h1{
-    font-size: 3rem;
-}
-
-#presentation-header p{
-    font-size: 2rem;
-
-}
-
-a{
-
 }
