--- a/docs/styles.css
+++ b/docs/styles.css
@@ -27,6 +27,8 @@ body{
     justify-content: space-around;
 }
 
+
+
 #presentation{
     display: flex;
     align-items: center;
@@ -48,33 +50,73 @@ body{
 #presentation span{
     width: 70%;
 }
+
+
 #links_{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     width: 70%;
+    margin-top: 2rem;
 }
 
-#links_ h2{
+#links_ a{
+    width: 30%;
+}
+
+.icon_link{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.icon_link span{
+    text-align: center;
     color: #F0F0F0;
-
+    font-size: 1em;
+    font-weight: bold;
 }
+
+.icon_link:hover img{
+    max-width: 2.8rem;
+    max-height: 2.8rem;
+}
+
+.icon_link:hover span{
+    font-style: italic;
+}
+
+.icon_link img{
+    max-width: 3rem;
+    max-height: 3rem;
+}
+
 
 
 #types{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 0;
+    /* width: 100%; */
+
+}
+#types a{
+    text-decoration: none;
 }
 
 #types ul{
     margin: 0;
+    /* width: 100%; */
+    padding: 0;
     display: flex;
     flex-direction: column;
     list-style: none;
     align-items: center;
     justify-content: space-around;
 }
+
 
 #types ul li{
     background-color:  var(--color3);
@@ -83,7 +125,7 @@ body{
     min-height: 10rem;
     align-items: center;
     justify-content: center;
-    transition: background-color 0.5s ease-in-out ;
+    transition: background-color 0.5s ease-out ;
     border-radius: 8px;
     color : var(--fontcolor1)
 }
@@ -91,4 +133,51 @@ body{
 #types ul li:hover{
     background-color: rgb(209, 63, 95);
     
+}
+
+@media (max-width: 800px) {
+    /* Adicione seus estilos aqui */
+    #content {
+        flex-direction:column;
+        margin-top: 10rem;
+        max-width: 100vw;
+        min-width: 100vw;
+        height: auto;
+    }
+    #presentation{
+        font-size: 1rem;
+        height: 100%;
+        margin-top: 20rem;
+        margin-bottom: 3rem;
+    }
+    #presentation span{
+        width: 100%;
+    }
+    #types{
+        width: 100%;
+    }
+    #types ul{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+     
+    }
+    #types ul a{
+        width: 50%;
+        padding: 0.5em;
+    }
+    #types ul li{
+        /* width: 100%; */
+        /* min-width: 0px; */
+        min-width: 2rem;
+        /* width: 90%; */
+    }
+    #types li h2{
+        font-size: 1rem;
+    }
+
+    #links_{
+        width: 120%;
+    }
+
 }
