fixing more things

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -150,6 +150,10 @@ body{
         margin-top: 20rem;
         margin-bottom: 3rem;
     }
+    #presentation h1{
+        text-align: center;
+    }
+
     #presentation span{
         width: 100%;
     }
